Remove creating unwanted virtual threads for invokeBalMethod